# skills

astronomy/: .env.example  SKILL.md  astronomy.py
bible-commentary/: README.md  SKILL.md
bible-commentary/agents/: openai.yaml
bible-commentary/references/: parsing-rules.md  sources-manifest.yaml
bible-commentary/scripts/: bootstrap_commentary.py  build_index.py  common_db.py  common_passages.py  common_progress.py  normalize_ai_friendly.py  oneoff_crawl_html.py  query_commentary.py
bible-commentary/tests/: test_common_db.py  test_common_passages.py
bible-text/: SKILL.md
bible-text/agents/: openai.yaml
bible-text/references/: data-layout.md
bible-text/scripts/: bible_text.py
gmail-notify/: SKILL.md  gmail-filter.sh
gog/: SKILL.md
kit-commands/: SKILL.md
msgraph/: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
msgraph/references/: azure-setup.md  onenote-api.md
msgraph/scripts/: auth_login.py  auth_status.py  ensure_venv.sh  onenote_create_notebook.py  onenote_create_page.py  onenote_create_section.py  onenote_list_notebooks.py  onenote_list_pages.py  onenote_list_sections.py  onenote_read_page.py  onenote_update_page.py  py.sh
msgraph/src/msgraph_kit/: __init__.py  auth.py  config.py  html_convert.py
msgraph/src/msgraph_kit/onenote/: __init__.py  notebooks.py  pages.py  sections.py
msgraph/tests/: test_config.py  test_html_convert.py
openclaw-internals/: SKILL.md
restart-notify/: SKILL.md
set-user-location/: SKILL.md
weather/: SKILL.md  weather.py  weather.sh  weather_summary.py
(+2 files in other folders)
